--- a/index.html
+++ b/index.html
@@ -1,12 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>JS Music App</title>
+    <link rel="stylesheet" href="styles.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Livvic&display=swap" rel="stylesheet">
 </head>
+
 <body>
+    <div class="social">
+        <a href="https://github.com/orangegrove1955/js-music">
+            <i class="fas fa-code"></i>
+        </a>
+        <a href="https://orangegrove1955.github.io/">
+            <i class="fab fa-github"></i>
+        </a>
+        <a href="https://www.linkedin.com/in/matthew-williams-00294015a/">
+            <i class="fab fa-linkedin"></i>
+        </a>
+    </div>
+    <div class="app">
+        <header>
+            <h1>Tap Sounds</h1>
+            <p>Make music using just a tap</p>
+        </header>
+        <div class="visual">
+        </div>
+        <div class="pads">
+            <div id="pad1">
+                <audio class="sound" src="./sounds/bubbles.mp3"></audio>
+            </div>
+            <div id="pad2">
+                <audio class="sound" src="./sounds/clay.mp3"></audio>
+            </div>
+            <div id="pad3">
+                <audio class="sound" src="./sounds/confetti.mp3"></audio>
+            </div>
+            <div id="pad4">
+                <audio class="sound" src="./sounds/glimmer.mp3"></audio>
+            </div>
+            <div id="pad5">
+                <audio class="sound" src="./sounds/moon.mp3"></audio>
+            </div>
+            <div id="pad6">
+                <audio class="sound" src="./sounds/ufo.mp3"></audio>
+            </div>
+        </div>
+    </div>
     <script src="script.js"></script>
 </body>
+
 </html>
