Added link to demo

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div class="app">
         <header>
             <h1>Tap Sounds</h1>
-            <p>Make music using just a tap</p>
+            <p>Make music with just a tap</p>
         </header>
         <div class="visual">
         </div>
